# INF1010

./: README.md
TP1/: CMakeLists.txt  Menu.cpp  Menu.h  Plat.cpp  Plat.h  Restaurant.cpp  Restaurant.h  Table.cpp  Table.h  main.cpp  polyFood.txt
TP2/: CMakeLists.txt  Menu.cpp  Menu.h  Plat.cpp  Plat.h  Restaurant.cpp  Restaurant.h  Table.cpp  Table.h  main.cpp
TP3/: CMakeLists.txt  Client.h  ClientPrestige.h  ClientRegulier.h  Menu.cpp  Menu.h  Plat.cpp  Plat.h  PlatBio.cpp  PlatBio.h  PlatCustom.cpp  PlatCustom.h  Restaurant.cpp  Restaurant.h  Table.cpp  Table.h  client.cpp  clientPrestige.cpp  clientRegulier.cpp  main.cpp  polyFood.txt
TP4/: Boisson.cpp  Boisson.h  CMakeLists.txt  Client.cpp  Client.h  ClientOccasionnel.cpp  ClientOccasionnel.h  ClientPrestige.cpp  ClientPrestige.h  ClientRegulier.cpp  ClientRegulier.h  DiagrammeDeClasse.uxf  LectureFichierEnSections.cpp  LectureFichierEnSections.h  Menu.cpp  Menu.h  Plat.cpp  Plat.h  PlatBio.cpp  PlatBio.h  PlatBioVege.cpp  PlatBioVege.h  PlatVege.cpp  PlatVege.h  Restaurant.cpp  Restaurant.h  Table.cpp  Table.h  Taxable.h  Vege.cpp  Vege.h  debogageMemoire.hpp  def.h  main.cpp  pointers.h  polyFood.txt
TP5/: Boisson.cpp  Boisson.h  CMakeLists.txt  Client.cpp  Client.h  ClientOccasionnel.cpp  ClientOccasionnel.h  ClientPrestige.cpp  ClientPrestige.h  ClientRegulier.cpp  ClientRegulier.h  Foncteur.h  GestionnaireGenerique.h  GestionnairePlats.cpp  GestionnairePlats.h  GestionnaireTables.cpp  GestionnaireTables.h  LectureFichierEnSections.cpp  LectureFichierEnSections.h  Plat.cpp  Plat.h  PlatBio.cpp  PlatBio.h  (+16 more)
(+19 files in other folders)
